argocd/my-default-backend/1-default-backend-dp-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend-depl
  namespace: default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-default-backend
  template:
    metadata:
      labels:
        app: app-default-backend
    spec:
      containers:
        - name: app-default-backend
          image: therafk/httpd:0.1   # therafk/rkapp21:1.0 
          ports:
            - containerPort: 80
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-svc
  namespace: default-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: app-default-backend
  ports:
    - port: 80
      targetPort: 80
